welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: '=' expected but ';' found.
while (false != fini) {
^BDRBuggle:31: error: ';' expected but '=' found.
else false=fini
          ^